[package]
name = "dates_core"
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
once_cell = "1.19.0"
