[package]
name = "hdate"
description = "A perpetual Jewish Calendar"
authors = { workspace = true }
edition = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
version = { workspace = true }


[dependencies]
chrono = { workspace = true }
hdate_core = { path = "../hdate_core", version = "0.1.0" }
