[package]
name = "hdate_core"
description = "Core functionallity for the HDate crate"
authors = { workspace = true }
edition = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
version = "0.1.0"


[dependencies]
chrono = { workspace = true }
once_cell = "1.19.0"
